--- a/_posts/2019-04-26-计算机网络-note-概述.md
+++ b/_posts/2019-04-26-计算机网络-note-概述.md
@@ -51,6 +51,74 @@ tags:
 
 ## 互联网的标准化工作
 
+制定互联网的正式标准妖要经过以下三个阶段：
+
+1. 互联网草案-有效期六个月，这个阶段不能算是RFC文档
+2. 建议标准-这个阶段称为RFC文档
+3. 互联网标准-达到正式标准后，每个标准分配一个编号STD xx，一个文档可以和多个RFC文档关联
+
+# 互联网的组成
+
+以工作方式上看可以分为两个部分：
+
+1. 边缘部分-由所有连接在互联网上的主机组成。这部分是**用户直接使用的**，用来进行通讯和资源共享
+2. 核心部分-由大量网络和连接这些网络的路由器组成。这部分是为**边缘部分提供服务的**
+
+## 互联网边缘部分
+
+处于互联网边缘的部分就是连接在互联网的所有主机，这些系统又称为**端系统**
+
+在网络边缘的通讯方式可以划分为两大类：
+
+客户-服务器方式（C/S）：
+	客户是服务请求方，服务器是提供方
+
+对等连接方式（P2P）：
+	每一台主机既是请求方，也是提供方
+	
+## 互联网的核心部分
+
+核心部分起到特殊作用的是**路由器**，他是一种专用计算机，路由器实现**分组交换**的关键构建，其任务是**转发收到的分组**，这是网络核心部分最重要的的功能
+
+**交换**是按照某重方式动态的传输线路的资源
+
+电路交换：
+
+	1. 建立连接（占用通信资源）
+	2. 通话（一直占用通信资源）
+	3. 释放连接（释放通信资源）
+
+	特点：再通话的全部时间内，通话的两个用户始终占用段对端的通讯资源
+	
+	当使用电路交换来传送计算机数据时，其线路的传输效率往往很低。因为计算机的数据时突发的出现在线路上的，线路的大部分时间是不传输数据的
+
+分组交换:
+
+	采用**存储转发**技术，把一个报文划分为几个分组在进行传送
+
+	报文：将要发送的整块数据
+		把较长点报文划分为一个个更小的等长的数据段。在每个数据段前面，加上一些由必要的控制信息组成的**首部**后，就构成了一个**分组**。分组又称为**包**，分组的头部称为**包头**
+
+	主机：为用户进行信息处理的
+	路由器：用来转发分组的，既进行分组交换
+	优点：
+		1. 高效-在分组传输的过程中动态分配传输宽带，对通信链路逐段占用
+		2. 灵活-为每个分组独立的选择合适的转发路由
+		3. 迅速-以分组作为传送单位，可以不先建立连接就能向其他计算机发送分组
+		4. 保证可靠地网络协议，分布式多路由的分组交换网，使网络有很好的生存性
+
+	缺点：
+		1. 延时-分组在各个路由器存储转发时需要排队
+		2. 更多开销-各分组必须携带的控制信息带来了额外的开销
+		3. 需要专门的管理控制机制 
+
+# 计算机网络的类别
+
+
+
+
+
+
 
 	
 
