--- a/_posts/2019-04-26-计算机网络-note-概述.md
+++ b/_posts/2019-04-26-计算机网络-note-概述.md
@@ -114,11 +114,108 @@ tags:
 
 # 计算机网络的类别
 
+## 几种不同类别的计算机网络
+
+按照网络作用进行分类：
+
+1. 广域网（WAN）
+2. 城域网（MAN）
+3. 局域网（LAN）
+4. 个人局域网（PAN）
+5. 无线个人局域网（WPAN）
+
+按照网络使用者分类：
+
+1. 共用网
+2. 专用网
+
+# 计算机网络的性能
+
+## 计算机网络性能指标
+
+速率：额定速度或标称速率，并非网络实际运行的速率
+
+宽带：值某个信号具有的频带宽度，值该信号所包围的各种不同频率成分所占据的频率范围
+
+	在计算机网络里，宽带表示网络中某通道传送数据的能力
+
+吞吐量：表示在单位时间内通过某个网络的实际数据量
 
 
-
-
-
-
+时延：延迟或迟延
 	
+	1. 发送时延：数据帧长度（bit）/发送速率（bit/s）
+	2. 传播时延：信道长度（m）/电磁波在新岛上的传播速率（m）
+	3. 处理时延：主机或路由器收到分组需要花费一定的时间处理
+	4. 排队时延：分组在经过网络传输是要经过许多路由器，分组进入路由器后要先在输入队列中排队等待处理
+	5. 总时延：以上四种时延之和
+
+	对于高速链路，我们提高的仅仅是数据的发送速率而不是比特在链路上的传播速率
+	提高数据的发送速率只是减少了数据的发送时延
+	
+时延宽带积：传播时延x宽带
+
+往返时间RTT：发送方发送数据到发送方收到确认的信息的时间
+
+利用率：分为信道利用率和网络利用率两种
+
+	信道利用率：是指信道有百分之几的时间是被利用的
+	网络利用率：是全网络信道利用率的加权平均值
+	
+## 计算机网络的非性能特征
+
+费用、质量、标准化、可靠性、可扩展性和可升级性和易于管理和维护
+
+# 计算机网络的体系结构
+
+## 计算机网络体系结构的形成
+
+OSI：开放系统互联基本参考模型（OSI/RM）
+
+失败的原因：
+
+1. OSI的专家们缺乏实际经验，完成OSI标准时缺乏商业驱动力
+2. OSI的协议实现起来过分复杂，而且运行效率很低
+3. OSI标准的指定周期太长，因此使得OSI标准的设备无法及时进入市场
+4. OSI的层次划分不太合理，有些功能在多个层次中多次出现
+
+TCP/IP:目前最广泛国际标准
+
+## 协议与划分层次
+
+为进行网络中的数据交换而建立的规则、标准或约定称为**网络协议**，由以下三个要素组成：
+
+1. 语法-既数据与控制新的的结构和格式
+2. 语义-既需要发出的任何控制信息，完成何种动作以及做出何种相应
+3. 同步-既时间实现顺序的详细说明
+
+分层带来的优点
+
+1. 各层之间独立，每层实现一种相应独立的功能
+2. 灵活性好，当任何一层发生变化时，只要层与层的接口保持不变，则这层以上或以下的各层不受影响
+3. 结构上可分隔开，各层都可以采用最合适的技术来实现
+4. 易于实现和维护，整个系统呗分解为若干个相对独立的子系统
+5. 能促进标准化工作，每一次的功能与提供的服务都有了精确的说明
+
+分层应注意每一层的功能非常准确，通常各层完成的任务主要有：
+
+1. 差错控制，使相应层次对等方的通讯更加可靠
+2. 流量控制，发送端发送的速率必须使接收端来得及接收，不要太快
+3. 分段和重装，发送端将发送的数据划分为更小的单位，在接收端还原
+4. 复用和分用，发送端几个高层会话复用一条底层的连接，在接收端在进行分用
+5. 连接建立与释放，交换数据前先建立一条逻辑连接，数据传送结束后释放
+
+
+# 具有五层协议的体系结构
+
+![计算机网络体系结构](/assets/images/20190426TCP.png)
+
+简单介绍五层结构：
+
+应用层：通过应用进程间的交互完成特定的网络应用，这层交互的数据单元叫做**报文**
+
+
+
+
+
 
