--- a/_posts/2019-04-26-计算机网络-note-概述.md
+++ b/_posts/2019-04-26-计算机网络-note-概述.md
@@ -206,13 +206,44 @@ TCP/IP:目前最广泛国际标准
 5. 连接建立与释放，交换数据前先建立一条逻辑连接，数据传送结束后释放
 
 
-# 具有五层协议的体系结构
+## 具有五层协议的体系结构
 
 ![计算机网络体系结构](/assets/images/20190426TCP.png)
 
 简单介绍五层结构：
 
 应用层：通过应用进程间的交互完成特定的网络应用，这层交互的数据单元叫做**报文**
+运输层：两台逐渐中进程之间的通讯提供通用的数据传输服务
+    数据传输协议TCP：提供面向连接的可靠地数据传输服务，其数据的单位是报文段
+    用户数据包协议UDP：提供无连接的、尽最大努力的数据传输服务，其数据的单位是用户数据报
+网络层：负责为分组交换网上的不同主机提供通讯服务，把运输层产生的报文段或用户数据报封装成分组或者包进行传送
+数据链路层：主机之前数据传输是在一段一段的链路上传输，传输单位是帧，每一组包括数据和必要的控制信息
+物理层：物理层上的传送数据单位是比特
+
+## 实体、协议、服务、服务访问点
+
+实体：任何可以发送或接收信息的硬件或软件进程
+协议：控制两个对等实体（或多个）进行通讯的规则的集合
+服务：在协议的控制下，两个对等实体间的通讯使得本层次能够向上个层次提供服务，要实现本协议还需要使用下面一层所提供的服务
+服务访问点SPA：同一系统相邻两层实体进行信息交互的地方
+服务原语OSI：上次使用下层服务必须与下层交换一些命令
+
+## TCP/IP的体系结构
+
+技术的发展并不是遵循严格的OSI分层概念
+
+[TCP/IP四层协议的表示方法举例](/assets/images/QQ20190506-165016@2x.png)
+
+* 另一种表示方法
+[TCP/IP四层协议的另一种表示方法](/assets/images/QQ20190506-165208@2x.png)
+
+TCP/IP可以为各式各样的应用提供服务，同时也允许IP协议在各式各样的网络构成的互联网上允许
+
+[TCP/沙漏计时器形状的示意图](/assets/images/QQ20190506-165408@2x.png)
+
+
+
+
 
 
 
