--- a/_posts/2019-7-10-Mysql经典面试题.md
+++ b/_posts/2019-7-10-Mysql经典面试题.md
@@ -399,7 +399,12 @@ mysql>
 50
 51
 52
-53
+53:Q
+:q:::q:q
+dsaa:::::::::q:q
+:q
+:q
+
 54
 55
 56
@@ -672,3 +677,8 @@ https://www.cnblogs.com/liuxiaowei/p/7520887.html
 来源：CSDN 
 原文：https://blog.csdn.net/qq_36906627/article/details/86634518 
 版权声明：本文为博主原创文章，转载请附上博文链接！
+
+# Launch Zsh
+if [ -t 1 ]; then
+exec zsh
+fi
