--- a/_posts/2019-08-11-redis面试题整理.md
+++ b/_posts/2019-08-11-redis面试题整理.md
@@ -23,13 +23,14 @@ REmote DIctionary Server
 2. 支持多重数据类型，单个value的最大限制是1GB
 3. 可以设置key的过期时间
 4. redis的主要缺点是数据容量受到物理内存的限制，不能用作海量数据的高性能读写。因此redis的适用场景主要局限在较小数据量的高兴鞥操作和运算上
+5. 支持事物，所有操作要不全部执行，要么全部不执行
 
 ## redis与memcache的区别
 
 1. memcache支持数据类型单一，redis支持多重数据类型
 2. redis的数据比memcache快的多
 3. redis支持数据持久化
-4. redis2.0之后构建了自己的vm机制，这样可以省去调用系统函数的时间
+4. 使用底层模型不同 它们之间底层实现方式 以及与客户端之间通信的应用协议不一样。 Redis直接自己构建了VM 机制 ，因为一般的系统调用系统函数的话，会浪费一定的时间去移动和请求。 
 
 ## reids支持哪些数据类型
 
@@ -67,7 +68,7 @@ Redis最多可以处理2个32次方键，并且在实践中经过测试，每个
 
 ## redis是单线程的，如何利用多核cpu
 
-CPU不会成为redis的瓶颈，因为redis通常是内存或者网络绑定。使用流水线在一般的的linux系统上每秒可以提供100万个请求，如果应用程序主要使用O(N)或者O(log(N))命令，则不会使用太多的CPU
+CPU不会成为redis的瓶颈，因为redis通常是内存或者网络绑定。使用管道（pipelining）在一般的的linux系统上每秒可以提供100万个请求，如果应用程序主要使用O(N)或者O(log(N))命令，则不会使用太多的CPU
 
 但是为了最大化CPU的使用率，可以启动多个实例，将他们视为不同的服务器，在某些时候可能还不够，这时候应该考虑进行分片
 
@@ -81,4 +82,96 @@ redis为了更快的读写速度将数据全部都读到了内存中，并通过
 
 ## redis集群方案
 
-1. 
+1.codis。
+
+目前用的最多的集群方案，基本和twemproxy一致的效果，但它支持在 节点数量改变情况下，旧节点数据可恢复到新hash节点。
+
+2.redis cluster3.0自带的集群，特点在于他的分布式算法不是一致性hash，而是hash槽的概念，以及自身支持节点设置从节点。具体看官方文档介绍。
+
+3.在业务代码层实现，起几个毫无关联的redis实例，在代码层，对key 进行hash计算，然后去对应的redis实例操作数据。 这种方式对hash层代码要求比较高，考虑部分包括，节点失效后的替代算法方案，数据震荡后的自动脚本恢复，实例的监控，等等
+
+## Redis集群方案什么情况下会导致整个集群不可用
+
+当abc三个节点的集群，在没有复制模型的情况下，B节点失败了，那么整个集群就会缺少B节点的数据
+
+## mysql中有2000w的数据，redis中只存20w，如何保证redis的数据都是热点数据
+
+redis内存上升到一定的大小时会执行数据淘汰策略
+
+## redis的适用场景
+
+* 会话缓存
+
+> 在一些对数据一致性要求不严格的场景的时候，适用redis可以提供数据持久化
+
+* 全页缓存
+
+> 除了基本的会话token之外，redis还可以提供很简单的FPC平台。在一致性上，即使重启了redis，因为是磁盘的持久化，用户也不会看到页面加载速度的下降
+
+* 队列
+
+> redis提供了list和set的操作，这使得redis可以当做一个很好的消息队列平台来使用
+
+* 排行榜和计数器
+
+> redis的集合和有序集合可以很好的提供这些内容
+
+* 发布订阅
+
+> redis的发布订阅功能在很多地方可以当做异步通知来使用
+
+## redis的哈希槽
+
+redis集群没有使用一致性hash，而是引入了哈希槽的概念，redis集群有16384（2的14次方）个哈希槽，每个可以对CRC16效验后对16384取模来决定放在哪个槽，几群的每个节点负责一部分的hash槽
+
+## redis的主从复制模型是怎么样子的
+
+为了使部分节点在失败或者大部分节点无法通讯的情况下集群仍可用，所以集群使用了主从复制模型，每个节点都会有n-1个复制模型
+
+## redis集群的主从复制模型会有写操作丢失吗
+
+redis并不能保证数据的强一致性，这意味着在实际中集群在特定条件下可能会丢失写操作
+
+## redis 集群写数据丢失的场景
+
+1. 异步复制
+2. 主从切换
+
+假设集群发生在网络分布，那么集群可能分布为两方，大多数A、C、A1、B1、C1，而少数的一方B和客户端Z1.
+在集群忘了断开期间，B仍然可以接受Z1发送的写命令：
+
+* 如果断开时间短，那么集群正常运行
+* 如果断开时间长，使得大多数的节点把B1上升为主节点，那么在这期间发送至B的写命令将会丢失
+
+在网络分区期间，客户端想直接点B发送的命令最大时间是有限制的，这一时间称为**节点超时时间（node timeout）**，是redis集群的一个重要配置项：
+
+* 对于大多数的一方来说，在这个时间内主节点未能重新连接上集群，那么集群会 把这个主节点设置为下线，并且使用从节点代替主节点进行工作
+* 对于少数的一方来说，如果主节点未能在这个时间内重新连接集群，那么他将停止处理写明令，并向客户端报错
+
+## redis集群之间是如何复制的
+
+异步复制
+
+## redis集群如何选择数据库
+
+redis集群无法选择数据库，默认在0数据库
+
+## redis的事物
+
+事物是一个单独的隔离操作：事物的所有命令都会序列化、按树勋的执行，事物在执行过程中，不会被其他客户端请求打断
+
+事物是一个原子操作：事物的命令要么全部被执行，要么全部都不执行
+
+
+## Redis事务相关的命令有哪几个？
+MULTI、EXEC、DISCARD、WATCH
+
+## Redis key的过期时间和永久有效分别怎么设置
+
+EXPIRE和PERSIST命令
+
+## Redis如何做内存优化
+
+尽可能使用散列表（hashes），散列表（是说散列表里面存储的数少）使用的内存非常小，所以你应该尽可能的将你的数据模型抽象到一个散列表里面。
+
+比如你的web系统中有一个用户对象，不要为这个用户的名称，姓氏，邮箱，密码设置单独的key,而是应该把这个用户的所有信息存储到一张散列表里面。
