--- a/_posts/2019-08-11-redis面试题整理.md
+++ b/_posts/2019-08-11-redis面试题整理.md
@@ -201,3 +201,17 @@ EXPIRE和PERSIST命令
 多路I/O复用模型是利用 select、poll、epoll 可以同时监察多个流的 I/O 事件的能力，在空闲的时候，会把当前线程阻塞掉，当有一个或多个流有 I/O 事件时，就从阻塞态中唤醒，于是程序就会轮询一遍所有的流（epoll 是只轮询那些真正发出了事件的流），并且只依次顺序的处理就绪的流，这种做法就避免了大量的无用操作。
 
 这里“多路”指的是多个网络连接，“复用”指的是复用同一个线程。采用多路 I/O 复用技术可以让单个线程高效的处理多个连接请求（尽量减少网络 IO 的时间消耗），且 Redis 在内存中操作数据的速度非常快，也就是说内存内的操作不会成为影响Redis性能的瓶颈，主要由以上几点造就了 Redis 具有很高的吞吐量。
+
+## 其他的几种模型
+
+1. 单进程多线程模型：MySQL、Memcached、Oracle（Windows版本）；
+
+2. 多进程模型：Oracle（Linux版本）；
+
+3. Nginx有两类进程，一类称为Master进程(相当于管理进程)，另一类称为Worker进程（实际工作进程）。启动方式有两种：
+
+（1）单进程启动：此时系统中仅有一个进程，该进程既充当Master进程的角色，也充当Worker进程的角色。
+
+（2）多进程启动：此时系统有且仅有一个Master进程，至少有一个Worker进程工作。
+
+（3）Master进程主要进行一些全局性的初始化工作和管理Worker的工作；事件处理是在Worker中进行的。
